Clean frontend: removed backend code, updated to use Render API

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ dist-ssr
 .env.local
 .env*.local
 
+# Backend folders (separate repositories)
+backend/
+backend-standalone/
+
 # Vercel
 .vercel
 
